<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/smallMargin"
    android:scrollIndicators="none"
    tools:context=".ui.GifFragment">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:gravity="center">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpCards"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:orientation="horizontal"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/llError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/ivError"
                android:layout_width="match_parent"
                android:maxWidth="400dp"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/error"
                android:src="@drawable/error_empty"/>

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="100dp"
                android:text="@string/example_description"
                android:layout_marginTop="@dimen/smallMargin"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/llContent"
        android:layout_marginTop="@dimen/largeMargin">

        <FrameLayout
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/btn_bck"
                android:rotation="180"
                android:src="@drawable/ic_arrow_forward" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/largeMargin"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/btn_frwd"
                android:src="@drawable/ic_arrow_forward" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>